--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <meta charset="utf-8" />
+    <title>Dicee</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1 id="title" class="text-center mt-5">Hello Rafli Kharisma Akbar</h1>
-    <div class="d-flex justify-content-center mt-5">
-      <input type="text" />
-      <button class="btn btn-danger ms-3">Submit</button>
-    </div>
-    <div class="container d-flex justify-content-center mt-4" style="height: 100vh">
-      <ul class="" id="list">
-        <li>Google</li>
-        <li>Yahoo</li>
-        <li><a href="">Bing</a></li>
-      </ul>
+    <div class="container">
+      <h1>Refresh Me</h1>
+
+      <div class="dice">
+        <p>Player 1</p>
+        <img class="" src="" />
+      </div>
+
+      <div class="dice">
+        <p>Player 2</p>
+        <img class="img2" src="" />
+      </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <script src="/index.js" charset="UTF-8"></script>
+    <footer>KM x Binar Academy Batch 6 FSW 1</footer>
+    <script src="index.js"></script>
   </body>
 </html>
