--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       </div>
     </div>
 
+    <!-- Rafli Kharisma Akbar-->
+
     <footer>KM x Binar Academy Batch 6 FSW 1</footer>
     <script src="index.js"></script>
   </body>
